create rake task to import csv values, add styles to index page

--- a/app/views/influencers/index.html.erb
+++ b/app/views/influencers/index.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Influencers</h1>
-
-<table>
+<div class= "header">
+  <h1>Influencers</h1>
+</div>
+<table class= "table">
   <thead>
-    <tr>
+    <tr class= "row">
       <th>Id</th>
       <th>Handle</th>
       <th>Follower count</th>
