update styles on table

--- a/app/assets/stylesheets/influencers.sass
+++ b/app/assets/stylesheets/influencers.sass
@@ -1,17 +1,43 @@
 // Place all the styles related to the Influencers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body
+  background-color: #eef0f6
+
 .header
   margin: 0 auto
   text-align: center
 
+  h1
+    font-size: 32px
+
+.search-field
+  height: 100px
+  width: 100px
+
 .table
-  border: 4px solid #A6CDE5
   border-radius: 4px
-  margin: 40px 50px 40px 50px
+  margin: 80px 50px 40px 50px
+
+  table
+    border-spacing: 0px
+    table-layout: auto
+    width: 100%
+
+  th
+    margin: 0 auto
+    padding: 15px
+    text-align: center
+
+  tbody
+    text-align: center
+    tr
+      padding: 5px
+      &:nth-child(odd)
+        background-color: #eef0f6
 
   .row
     background-color: #aee4fb
     font-family: "HelveticaNeue-Light"
-    font-size: 14px
+    font-size: 16px
     padding: 10px
